@@ -123,13 +123,20 @@ class SimpleCLI:
                 except:
                     print 'invalid input.'
 
-def default_rec_manager ():    
+def get_recipe_manager (**args):
+    if not args: args = dbargs
     try:
-        return RecipeManager(**dbargs)
+        return RecipeManager(**args)
     except RecData,rd:
         return rd
 
-get_recipe_manager = default_rec_manager # better function name...
+def default_rec_manager ():
+    return get_recipe_manager(**dbargs)
+    #try:
+    #    return RecipeManager(**dbargs)
+    #except RecData,rd:
+    #    return rd
+
 
 if __name__ == '__main__':
     #rm = RecipeManager(**dbargs)
